visible fix

--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ nav{
     font-size: 2.5vmax;
     color: #FFF;
     height: 100%;
-    background: rgba(0,0,0,0.75);
+    background: rgba(0,0,0,0.6);
     display: flex;
     justify-content: center;
     flex-direction: column;
